fixed location spacing

--- a/resources/style.css
+++ b/resources/style.css
@@ -68,17 +68,26 @@ header {
 
 .locations {
   background-image: url("https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-locations-background.jpg");
-  width: 1200px;
   height: 500px;
+  width: 1200px;
 }
 
-.box-text {
+.text {
   width: 300px;
   height: 300px;
-  display: block;
   background-color: black;
+  margin: 15px 20px;
+  opacity: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
-.location-text {
-  display: inline-flex;
+.boxes {
+  display: flex;
+  justify-content: center;
+}
+
+.contact {
+  height: 200px;
 }
